
20070211: Applied patch #1652684 - usage of new ToolBarBtn - thanks to loh_tar for the patch.

20070211: Applied patch #1651805 - RcFile +Preferences.diff - thanks to loh_tar for the patch

20070214: Applied patch #1659728 - progressBar for CSV quote dialog - thanks to xley for the patch.

20070214: Applied patch #1659771 - Toolbar.cpp, add new buttons +possibl to place vertical - thanks to loh_tar for the patch.

20070215: Applied patch #1659638 - Qtstalker.cpp use modified RcFile.cpp - thanks to loh_tar for the patch.            

20070215: Applied patch #1659999 - MainMenubar use RcFile - thanks to loh_tar for the patch.

20070215: Applied patch #1660435 - ChartToolbar use RcFile - thanks to loh_tar for the patch.

20070216: Applied patch #1660854 - Font+ColorButton knows/reports changes - thanks to loh_tar for the patch.

20070309: Applied patch #1662034 - Makes both ToolBars full configurable - thanks to loh_tar for the patch.

20070309: Applied patch #1668328 - install.html, add TALib directions - thanks to loh_tar for the patch.

20070309: Applied patch #1670387 - Config::Setup() use RcFile.cpp - thanks to loh_tar for the patch.

20070309: Applied patch #1676151 - fix a BUG at UTIL(INRANGE... - thanks to loh_tar for the patch.

20070310: Applied patch #1677621 - fix at last cvs commit - thanks to loh_tar for the patch.

20070310: Applied patch #1673118 - More features to candles - thanks to ommarcocarvalho for the patch.

20070313: Applied patch #1678913 - Restore most of the prog settings/status - thanks to loh_tar for the patch.

20070417: Applied patch #1701281 - revert changes to BARS which broke candles - thanks to xley for the patch.

20070417: Applied patch #1701267 - progressBar for quote plugins - thanks to xley for the patch.

20070518: Applied patch #1711711 - repeat "Symbol" column at end of IndicatorSummary - thanks to xley for the patch.



