@@ -255,6 +255,8 @@
 
 20070518: Applied patch #1711711 - repeat "Symbol" column at end of IndicatorSummary - thanks to xley for the patch.
 
+20070518: Applied patch #1711714 - show Buy/Sell objects in the data panel - thanks to xley for the patch.
+
 
 
 
